@@ -104,6 +104,9 @@ namespace BOB
                 new GeneralOptionsPanel(tabStrip, 0);
                 new ConfigurationsPanel(tabStrip, 1);
                 new RuiningOptionsPanel(tabStrip, 2);
+
+                // Disable hotkey while options panel is open.
+                UIThreading.Operating = false;
             }
             catch (Exception e)
             {
@@ -125,6 +128,9 @@ namespace BOB
             {
                 GameObject.Destroy(optionsGameObject);
                 optionsGameObject = null;
+
+                // Re-enable hotkey.
+                UIThreading.Operating = true;
             }
         }
     }
